--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -346,6 +346,7 @@ spa:
       # index: "Interventions"
       # new: "Nouvelle intervention"
       # run: "Exécuter l'intervention"
+      # set: "Saisie des valeurs de l'intervention"
       # show: "%{procedure_name} N°%{number}"
     backend/inventories:
       edit: "Modificacion del inventario"
