--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -368,6 +368,7 @@ arb:
       # index: "Interventions"
       # new: "Nouvelle intervention"
       # run: "Exécuter l'intervention"
+      # set: "Saisie des valeurs de l'intervention"
       # show: "%{procedure_name} N°%{number}"
     backend/inventories:
       edit: "تعديل الجرد"
