--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -986,7 +986,7 @@ arb:
         # energy: "Énergie"
         # luminous_intensity: "Intensité lumineuse"
         # mass: "Masse"
-        # mass_area_density: "Quantité de matière par unité de surface"
+        # mass_area_density: "Masse par unité de surface"
         # mass_concentration: "Concentration massique"
         # mass_density: "Quantité de matière par unité de matière"
         # mass_flow: "Débit massique"
@@ -999,6 +999,7 @@ arb:
         # temperature: "Température"
         # time: "Temps"
         # volume: "Volume"
+        # volume_area_density: "Volume par surface"
         # volume_concentration: "Concentration volumique"
         # volume_flow: "Débit volumique"
       # name: "Dimensions"
@@ -2363,6 +2364,7 @@ arb:
         # bar: "Bar"
         # billion: "Milliard"
         # billion_per_gram: "Milliard par gramme"
+        # billionth: "Milliardième"
         # candela: "Candela"
         # celsius: "Celsius"
         # centiliter: "Centilitre"
@@ -2373,7 +2375,7 @@ arb:
         # centimole_per_kilogram: "Centimole par kilogramme"
         # cubic_meter: "Mètre cube"
         # day: "Jour"
-        # degree: "Degrée"
+        # degree: "Degré"
         # english_horsepower: "Cheval-vapeur anglais"
         # farenheit: "Farenheit"
         # french_horsepower: "Cheval-vapeur français"
@@ -2399,17 +2401,17 @@ arb:
         # kilogram_per_square_meter: "Kilogramme par mètre carré"
         # kilometer: "Kilomètre"
         # kilometer_per_hour: "Kilomètre par heure"
-        # kilometer_per_second: "Kilométre par seconde"
+        # kilometer_per_second: "Kilomètre par seconde"
         # kilopascal: "Kilopascal"
         # kilowatt: "Kilowatt"
         # kilowatt_hour: "Kilowatt par heure"
         # liter: "Litre"
         # liter_per_hectare: "Litre par hectare"
-        # liter_per_square_meter: "litre par mètre carré"
+        # liter_per_square_meter: "Litre par mètre carré"
         # mass_percent: "Pourcentage de masse"
         # megawatt: "Mégawatt"
-        # meter: "Métre"
-        # meter_per_second: "Métre par seconde"
+        # meter: "Mètre"
+        # meter_per_second: "Mètre par seconde"
         # microgram: "Microgramme"
         # microgram_per_liter: "Microgramme par litre"
         # milliampere: "Milliampere"
@@ -2436,7 +2438,6 @@ arb:
         # radian: "Radian"
         # second: "Seconde"
         # square_meter: "Mètre carré"
-        # ten: "Dizaine"
         # thousand: "Millier"
         # thousand_per_hectare: "Millier par hectare"
         # thousand_per_hectogram: "Millier par hectogramme"
