--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -341,6 +341,7 @@ eng:
       # index: "Interventions"
       # new: "Nouvelle intervention"
       # run: "Exécuter l'intervention"
+      # set: "Saisie des valeurs de l'intervention"
       # show: "%{procedure_name} N°%{number}"
     backend/inventories:
       edit: "Edit the inventory"
