Unifies events in calendar

--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -705,7 +705,11 @@ jpn:
     # first_met_at: "Date de la première rencontre"
     # first_name: "Prénom"
     # first_number: "Premier numéro"
+    # first_producer: "First producer"
+    # first_producer_way: "First producer way"
     # formats: "Formats"
+    # fourth_producer: "Fourth producer"
+    # fourth_producer_way: "Fourth producer way"
     # frequency: "Frequency"
     # frozen_indicators: "Frozen indicators"
     # frozen_indicators_list: "Frozen indicators list"
@@ -1026,6 +1030,8 @@ jpn:
     # sampled_at: "Prélevé le"
     # sampler: "Préleveur"
     # scheduled: "Encaissement programmé"
+    # second_producer: "Second producer"
+    # second_producer_way: "Second producer way"
     # sender: "Expéditeur"
     # sent_at: "Expédié le"
     # serial: "N°Lot"
@@ -1073,6 +1079,8 @@ jpn:
     # template: "Modèle"
     # theoric_quantity: "Quantité théorique"
     # third: "Tiers"
+    # third_producer: "Third producer"
+    # third_producer_way: "Third producer way"
     # third_role: "Third role"
     # thread: "Thread"
     # title: "Titre"
