--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -350,8 +350,11 @@ fra:
       # product_phase: "Product phase"
       product_process: "Processus" #?
       product_process_phase: "Phase de processus" #?
+      # product_quadruple_mixing: "Product quadruple mixing"
+      # product_quintuple_mixing: "Product quintuple mixing"
       product_reading: "Valeur d’indicateur"
       # product_reading_task: "Product reading task"
+      # product_triple_mixing: "Product triple mixing"
       production: "Production"
       production_support: "Support de production"
       # production_support_marker: "Production support marker"
@@ -534,8 +537,6 @@ fra:
     contour: "Silhouette" #?
     coordinate: "Coordonnée"
     # coordinate_columns: "Coordinate columns"
-    # coproducer: "Coproducer"
-    # coproducer_way: "Coproducer way"
     country: "Pays"
     created_at: "Date de création"
     creator: "Créateur"
@@ -676,6 +677,8 @@ fra:
     family: "Famille"
     father: "Père"
     faxes: "Fax"
+    # fifth_producer: "Fifth producer"
+    # fifth_producer_way: "Fifth producer way"
     # file_content_text: "File content text"
     # file_content_type: "File content type"
     # file_file_name: "File file name"
@@ -696,7 +699,11 @@ fra:
     first_met_at: "Date de la première rencontre"
     first_name: "Prénom"
     first_number: "Premier numéro"
+    first_producer: "First producer"
+    first_producer_way: "First producer way"
     formats: "Formats"
+    fourth_producer: "Fourth producer"
+    fourth_producer_way: "Fourth producer way"
     frequency: "Frequency"
     frozen_indicators: "Frozen indicators"
     frozen_indicators_list: "Frozen indicators list"
@@ -955,10 +962,13 @@ fra:
     product_nature: "Product nature"
     # product_nature_categories: "Product nature categories"
     product_ownerships: "Product ownerships"
+    # product_quadruple_mixings: "Product quadruple mixings"
+    # product_quintuple_mixings: "Product quintuple mixings"
     # product_reading: "Product reading"
     # product_reading_task: "Product reading task"
     product_reading_tasks: "Product reading_tasks"
     product_readings: "Product indicator data"
+    # product_triple_mixings: "Product triple mixings"
     product_way: "Product way"
     production: "Production"
     # production_support: "Production support"
@@ -1057,6 +1067,8 @@ fra:
     sampled_at: "Prélevé le"
     sampler: "Préleveur"
     scheduled: "Encaissement programmé"
+    second_producer: "Second producer"
+    second_producer_way: "Second producer way"
     sender: "Expéditeur"
     sent_at: "Expédié le"
     serial: "N°Lot"
@@ -1110,6 +1122,8 @@ fra:
     # theoric_population: "Theoric population"
     theoric_quantity: "Quantité théorique" #?
     third: "Tiers"
+    third_producer: "Third producer"
+    third_producer_way: "Third producer way"
     third_role: "Third role"
     thread: "Thread"
     title: "Titre" #?
