--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -295,6 +295,7 @@ spa:
       index: "Exercicios contables"
       new: "Crear un nuevo ejercicio"
       show: "Exercicio contable %{code}"
+    backend/fungi: #?
     backend/gaps:
       # index: "Pertes et profits"
       # show: "Perte ou profit N°%{number}"
@@ -727,6 +728,7 @@ spa:
     backend/vegetals: #?
     backend/wine_tanks:
       # index: "Cuverie"
+    backend/wine_transformers: #?
     backend/workers:
       # edit: "Modifier l’équipier %{name}"
       # index: "Équipiers"
