--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -257,6 +257,7 @@ jpn:
       # index: "Exercices comptables"
       # new: "Créer un nouvel exercice"
       # show: "Exercice comptable %{code}"
+    backend/fungi: #?
     backend/gaps:
       # index: "Pertes et profits"
       # show: "Perte ou profit N°%{number}"
@@ -643,6 +644,7 @@ jpn:
     backend/vegetals: #?
     backend/wine_tanks:
       # index: "Cuverie"
+    backend/wine_transformers: #?
     backend/workers:
       # edit: "Modifier l’équipier %{name}"
       # index: "Équipiers"
