--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -728,7 +728,8 @@ spa:
     backend/vegetals: #?
     backend/wine_tanks:
       # index: "Cuverie"
-    backend/wine_transformers: #?
+    backend/wine_transformers:
+      # index: "Produits oenologiques"
     backend/workers:
       # edit: "Modifier l’équipier %{name}"
       # index: "Équipiers"
