--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -721,7 +721,8 @@ eng:
       unlock: "Unlock user"
     backend/wine_tanks:
       # index: "Cuverie"
-    backend/wine_transformers: #?
+    backend/wine_transformers:
+      # index: "Produits oenologiques"
     backend/workers:
       # edit: "Modifier l’équipier %{name}"
       # index: "Équipiers"
