--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1109,7 +1109,9 @@ eng:
         # trial_balance: "Balance comptable"
         # veterinary_booklet: "Carnet vétérinaire"
         # vine_phytosanitary_registry: "Registre phytosanitaire - Vigne"
+        # wine_bottling_registry: "Registre de conditionnement - Vin"
         # wine_detention_registry: "Registre de détention - Vin"
+        # wine_manipulation_registry: "Registre de manipulation - Vin"
       # name: "Types de documents"
       property_natures:
         # category: "Catégories"
