--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1063,7 +1063,9 @@ jpn:
         # trial_balance: "Balance comptable"
         # veterinary_booklet: "Carnet vétérinaire"
         # vine_phytosanitary_registry: "Registre phytosanitaire - Vigne"
+        # wine_bottling_registry: "Registre de conditionnement - Vin"
         # wine_detention_registry: "Registre de détention - Vin"
+        # wine_manipulation_registry: "Registre de manipulation - Vin"
       # name: "Types de documents"
       property_natures:
         # category: "Catégories"
