--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -2051,6 +2051,7 @@ fra:
         white_sugar_25kg: "Sucre blanc - 25kg"
         wine: "Vin"
         wine_press: "Pressoir"
+        wine_storage_division: "Zone de stockage - vins conditionnés"
         wine_vinasse: "Vinasse de distillerie"
         winter_barley_crop: "Culture d’orge d’hiver"
         winter_barley_seed_25: "Semence d’orge d’hiver sac de 25kg"
@@ -2195,6 +2196,7 @@ fra:
         wine_alkalinizing: "Alcalinisant (vin)"
         wine_crop: "Vigne"
         wine_press: "Pressoir (vin)"
+        wine_storage_division: "Zone de stockage - vins conditionnés"
         wine_tank: "Cuve à vin"
     production_natures:
       name: "Types de productions"
