Adds ManureManagementPlan to app

--- a/config/locales/arb/complement.yml
+++ b/config/locales/arb/complement.yml
@@ -465,6 +465,10 @@ arb:
         transport: "وسيلة النقل"
         unit: "الوحدة"
         user: "المستخدم"
+    manure_management_plan:
+
+    manure_management_plan_zone:
+
     matter:
 
     medicine:
