--- a/config/locales/jpn/complement.yml
+++ b/config/locales/jpn/complement.yml
@@ -382,6 +382,10 @@ jpn:
     listing:
       root_model:
         company: "会社"
+    manure_management_plan:
+
+    manure_management_plan_zone:
+
     matter:
 
     medicine:
