--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -601,6 +601,7 @@ spa:
     # declared_at: "Déclarée le"
     # deduction_account: "TVA déductible"
     # deduction_taxes: "TVA déductible"
+    # default_computation_method: "Default computation method"
     # default_mail_address: "Adresse email par défaut"
     # default_storage: "Emplacement par défaut"
     # default_variant: "Variant par défault"
@@ -1070,6 +1071,7 @@ spa:
     # supplier: "Fournisseur"
     # supplier_account: "Compte fournisseur associé"
     # suppliers: "Fournisseurs"
+    # support: "Support"
     # supports: "Supports"
     # suspended: "Suspendu"
     # target: "Cible"
