--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -95,6 +95,7 @@ arb:
       show: "تفاصيل عن مواقع التخزين : %{name}"
     backend/calculators:
       # index: "Calculateurs"
+    backend/calculators/manure_management_plans: #?
     backend/calculators/nitrogen_inputs:
       # edit: "Calcul des apports d’azote"
       # show: "Calcul des apports d’azote"
@@ -449,6 +450,11 @@ arb:
       edit: "تعديل التفويض" #?
       index: "تفويضات" #?
       new: "انشاء تفويض" #?
+    backend/manure_management_plans:
+      # edit: "Modifier le plan de fumure\_: %{name}"
+      # index: "Plans de fumure"
+      # new: "Nouveau plan de fumure"
+      # show: "Plan de fumure\_: %{name}"
     backend/matters:
       # edit: "Modifier la matière\_: %{name}"
       # index: "Matières"
