--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1464,6 +1464,8 @@ arb:
         # heat: "Chaleur"
         # pregnancy: "Pleine"
       # name: "États de la reproduction mammifère"
+    manure_management_plan_computation_methods:
+      items: #?
     molecules:
       items:
         # ammonia: "Ammoniac"
