--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1544,6 +1544,8 @@ eng:
         # heat: "Chaleur"
         # pregnancy: "Pleine"
       # name: "États de la reproduction mammifère"
+    manure_management_plan_computation_methods:
+      items: #?
     molecules:
       items:
         # ammonia: "Ammoniac"
