--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -602,6 +602,7 @@ jpn:
     # declared_at: "Déclarée le"
     # deduction_account: "TVA déductible"
     # deduction_taxes: "TVA déductible"
+    # default_computation_method: "Default computation method"
     # default_mail_address: "Adresse email par défaut"
     # default_storage: "Emplacement par défaut"
     # default_variant: "Variant par défault"
@@ -1069,6 +1070,7 @@ jpn:
     # supplier: "Fournisseur"
     # supplier_account: "Compte fournisseur associé"
     # suppliers: "Fournisseurs"
+    # support: "Support"
     # supports: "Supports"
     # suspended: "Suspendu"
     # target: "Cible"
