--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -485,28 +485,6 @@ fra:
         yttrium: "Yttrium"
         zinc: "Zinc"
         zirconium: "Zirconium"
-    controlled_resources:
-      name: "Ressources contrôlées"
-      property_natures:
-        accesses: "Accès"
-      items:
-        accountancy_dashboard: "Tableau de bord de la comptabilité"
-        accounts: "Comptes comptables"
-        activities: "Activités"
-        affairs: "Affaires"
-        analysis: "Analyses"
-        animal_groups: "Troupeaux"
-        animal_medicines: "Médicaments vétérinaires"
-        animals: "Animaux"
-        bank_statements: "Relevés de banque"
-        bioproducts: "Bioproduits"
-        building_divisions: "Salles/zones de bâtiment"
-        buildings: "Bâtiments"
-        calculators: "Calculateurs"
-        campaigns: "Campagnes"
-        cash_tranfers: "Virements"
-        entities: "Personnes (physiques et morales)"
-        interventions: "Interventions"
     countries:
       name: "Pays"
       property_natures:
@@ -1058,6 +1036,112 @@ fra:
         wine_bottling_registry: "Registre de conditionnement - Vin"
         wine_detention_registry: "Registre de détention - Vin"
         wine_manipulation_registry: "Registre de manipulation - Vin"
+    enterprise_resource_actions:
+      name: "Actions des ressources d’entreprise"
+      items:
+        close: "Fermer"
+        execute: "Exécuter"
+        link: "Lier"
+        lock: "Verrouiller"
+        read: "Lire"
+        reopen: "Réouvrir"
+        write: "Écrire"
+    enterprise_resources:
+      name: "Ressources d’entreprise"
+      property_natures:
+        accesses: "Accès"
+      items:
+        accounts: "Comptes comptables"
+        activities: "Activités"
+        affairs: "Affaires"
+        # aggregators: "Aggregators"
+        # analyses: "Analyses"
+        # analytic_distributions: "Analytic distributions"
+        # animal_foods: "Animal foods"
+        animal_groups: "Troupeaux"
+        animal_medicines: "Médicaments vétérinaires"
+        # animal_products: "Animal products"
+        animals: "Animaux"
+        bank_statements: "Relevés de banque"
+        building_divisions: "Salles/zones de bâtiment"
+        buildings: "Bâtiments"
+        campaigns: "Campagnes"
+        # cash_transfers: "Cash transfers"
+        # cashes: "Cashes"
+        # catalog_prices: "Catalog prices"
+        # catalogs: "Catalogs"
+        # cultivable_zones: "Cultivable zones"
+        # custom_fields: "Custom fields"
+        # deposits: "Deposits"
+        # districts: "Districts"
+        # document_templates: "Document templates"
+        # documents: "Documents"
+        entities: "Personnes (physiques et morales)"
+        # equipments: "Equipments"
+        # establishments: "Establishments"
+        # events: "Events"
+        # financial_assets: "Financial assets"
+        # financial_years: "Financial years"
+        # fungi: "Fungi"
+        # gaps: "Gaps"
+        # guide_analyses: "Guide analyses"
+        # guides: "Guides"
+        # identifiers: "Identifiers"
+        # incoming_deliveries: "Incoming deliveries"
+        # incoming_delivery_modes: "Incoming delivery modes"
+        # incoming_payment_modes: "Incoming payment modes"
+        # incoming_payments: "Incoming payments"
+        interventions: "Interventions"
+        # inventories: "Inventories"
+        # issues: "Issues"
+        # journal_entries: "Journal entries"
+        # journals: "Journals"
+        # land_parcel_clusters: "Land parcel clusters"
+        # land_parcel_groups: "Land parcel groups"
+        # land_parcels: "Land parcels"
+        # legal_entities: "Legal entities"
+        # listings: "Listings"
+        # manure_management_plans: "Manure management plans"
+        # matters: "Matters"
+        # medicines: "Medicines"
+        # mineral_matters: "Mineral matters"
+        # myselves: "Myselves"
+        # net_services: "Net services"
+        # observations: "Observations"
+        # organic_matters: "Organic matters"
+        # outgoing_deliveries: "Outgoing deliveries"
+        # outgoing_delivery_items: "Outgoing delivery items"
+        # outgoing_delivery_modes: "Outgoing delivery modes"
+        # outgoing_payment_modes: "Outgoing payment modes"
+        # outgoing_payments: "Outgoing payments"
+        # people: "People"
+        # plants: "Plants"
+        # postal_zones: "Postal zones"
+        # prescriptions: "Prescriptions"
+        # product_groups: "Product groups"
+        # product_memberships: "Product memberships"
+        # product_nature_categories: "Product nature categories"
+        # product_nature_variants: "Product nature variants"
+        # product_natures: "Product natures"
+        # productions: "Productions"
+        # products: "Products"
+        # purchase_natures: "Purchase natures"
+        # purchases: "Purchases"
+        # roles: "Roles"
+        # sale_natures: "Sale natures"
+        # sales: "Sales"
+        # sequences: "Sequences"
+        # settings: "Settings"
+        # settlements: "Settlements"
+        # subscription_natures: "Subscription natures"
+        # subscriptions: "Subscriptions"
+        # taxes: "Taxes"
+        # teams: "Teams"
+        # trackings: "Trackings"
+        # transfers: "Transfers"
+        # transports: "Transports"
+        # users: "Users"
+        # workers: "Workers"
     entity_link_natures:
       name: "Types de liens sociaux"
       property_natures:
