--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -744,14 +744,19 @@ arb:
         # carrot: "Carotte"
         # chicory: "Endive"
         # corn: "Maïs"
+        # corn_sorghum: "Maïs et sorgho"
+        # crucifers: "Crucifères"
         # flax: "Lin"
         # grass: "Graminée"
         # grass_leguminous: "Graminée et Legumineuse"
+        # leguminosae: "Légumineuses"
         # leguminous: "Legumineuse"
         # meadow: "Prairie"
         # nightshade: "Pomme de terre"
         # peas: "Pois"
         # rape: "Colza"
+        # secale_phacelia: "Seigle et phacélie"
+        # sorghum: "Sorgho"
         # spring_crop: "Culture de printemps"
         # spring_straw_cereal: "Céréales à paille de printemps"
         # straw_cereal: "Céréales à paille"
@@ -1277,6 +1282,7 @@ arb:
         # phosphate_concentration: "Teneur en phosphate (P2O5)"
         # phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         # phosphorus_concentration: "Teneur en phosphore"
+        # plant_growth_level: "Niveau de croissance d'une plante"
         # plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         # plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         # plants_density: "Densité de plantation"
@@ -1285,6 +1291,7 @@ arb:
         # potash_concentration: "Teneur en potasse (K2O)"
         # potassium_concentration: "Teneur en potassium"
         # potential_hydrogen: "Potentiel hydrogène (pH)"
+        # precocity_index: "Index de précocité"
         # protein_concentration_index: "Taux protéïque (TP)"
         # protein_matters_concentration: "Teneur en matières protéïques"
         # reference_year: "Millésime"
@@ -1472,7 +1479,10 @@ arb:
         # pregnancy: "Pleine"
       # name: "États de la reproduction mammifère"
     manure_management_plan_computation_methods:
-      items: #?
+      items:
+        # external: "Externe"
+        # poitou_charentes: "Poitou charentes"
+      # name: "Méthodes de calcul (PPF)"
     molecules:
       items:
         # ammonia: "Ammoniac"
@@ -1539,6 +1549,8 @@ arb:
     nmp_poitou_charentes_abacus_9: #?
     nmp_poitou_charentes_abacus_eight:
       # name: "Abaque 8 de la méthode de calcul de bilan azoté Poitou-Charentes"
+    nmp_poitou_charentes_abacus_eleven:
+      # name: "Abaque 11 de la méthode de calcul de bilan azoté Poitou-Charentes"
     nmp_poitou_charentes_abacus_five:
       # name: "Abaque 5 de la méthode de calcul de bilan azoté Poitou-Charentes"
     nmp_poitou_charentes_abacus_four:
@@ -1584,6 +1596,11 @@ arb:
         # heading: "Épiaison"
         # swelling: "Gonflement"
       # name: "États de la reproduction végétale"
+    plants_growth_levels:
+      items:
+        # hight: "Forte"
+        # low: "Faible"
+      # name: "Niveau de croissance des plantes"
     procedure_natures:
       items:
         # addition: "Ajout de produits"
@@ -2496,6 +2513,7 @@ arb:
         # beta: "Betterave"
         # betulaceae: "Betulaceae"
         # bioproduct: "Produit vivant"
+        # boraginaceae: "Boraginaceae"
         # bos: "Bovin"
         # bottle: "Bouteille"
         # bottling: "Embouteillage"
@@ -2619,6 +2637,7 @@ arb:
         # pauetet: "Pauetet"
         # peach: "Pêche"
         # pear: "Poire"
+        # phacelia: "Phacelia"
         # phaseolus: "Haricot"
         # pisum: "Pisum"
         # plant: "Végétal"
@@ -2710,6 +2729,7 @@ arb:
         # tonda_giffoni: "Tonda giffoni"
         # tractor: "Tracteur"
         # trailer: "Remorque"
+        # trifolium: "Trifolium"
         # triticosecale: "Triticale"
         # triticum: "Blé"
         # triticum_aestivum: "Blé tendre"
